--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,13 @@ body {
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 10em repeat(2, 1fr);
-    grid-gap: 2em;
+    grid-gap: 1em;
 }
 
 .card {
     background-color: white;
     width: 23em;
-    height: 15em;
+    height: 14em;
     border-radius: .3em;
     padding: 1em 2em;
     border-top: 3px solid black;
@@ -70,7 +70,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-top: 3em;
+    margin-top: 2em;
 }
 
 .info-container {
@@ -136,8 +136,11 @@ body {
 .attribution {
     font-size: 11px;
     text-align: center;
-    margin-top: 1em;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    right: 0;
 }
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: var(--very-dark-blue);
 }
