--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .main-container {
@@ -134,7 +135,18 @@ body {
     border-top-color: var(--blue);
 }
 
+@media (max-width: 1300px) {
+    .main-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
+    .card:last-child {
+        margin-bottom: 4em;
+    }
+}
 
 
 /* Frontend Mentor Footer */
