--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,8 @@ body {
 .card:hover {
     transform: scale(1.03);
     cursor: pointer;
+    box-shadow: 5px 5px 10px 0 var(--grayish-blue);
+
 }
 
 .info-container {
